--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.ql-editor {
+  min-height: 600px;
+  font-size: 16px;
+  line-height: 1.7;
+}
+
 /* BookPlanner Design System - Academic & Book-inspired theme */
 
 @layer base {
