--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import 'react-quill/dist/quill.snow.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,6 +8,28 @@
   font-size: 16px;
   line-height: 1.7;
 }
+
+/* Quill size 옵션 스타일 */
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="small"],
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="small"] {
+  font-size: 0.75em;
+}
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="large"],
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="large"] {
+  font-size: 1.5em;
+}
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value="huge"],
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="huge"] {
+  font-size: 2.5em;
+}
+.ql-size-small { font-size: 0.75em; }
+.ql-size-large { font-size: 1.5em; }
+.ql-size-huge { font-size: 2.5em; }
+
+/* Quill font 옵션 스타일 */
+.ql-font-serif { font-family: serif; }
+.ql-font-monospace { font-family: monospace; }
+.ql-font-sans { font-family: sans-serif; }
 
 /* BookPlanner Design System - Academic & Book-inspired theme */
 
